--- a/action.yml
+++ b/action.yml
@@ -1,35 +1,39 @@
 name: Compiling Minecraft Mod
-description: very simple action use to compile your minecraft mod
+description: Very simple action to compile your Minecraft mod
 branding:
   icon: archive
   color: white
+
+inputs:
+  java-version:
+    description: "Java version to use (e.g., 17, 21, 24)"
+    required: false
+    default: "21"
 
 on:
   push:
   pull_request:
 
 runs:
-
   using: "composite"
-
   steps:
-  - uses: actions/checkout@v3
-    with:
-      fetch-depth: 0
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-  - name: Set up JDK 17
-    uses: actions/setup-java@v2
-    with:
-      java-version: '17'
-      distribution: 'adopt'
-        
-  - name: Setup Gradle
-    uses: gradle/gradle-build-action@v2
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ inputs.java-version }}
+        distribution: "adopt"
 
-  - name: Run chmod to make gradlew executable
-    run: chmod +x ./gradlew
-    shell: bash
-      
-  - name: Build with Gradle
-    run: ./gradlew build
-    shell: bash
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+      shell: bash
+
+    - name: Build with Gradle
+      run: ./gradlew build
+      shell: bash
