--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Compiling Minecraft Mod
+name: Compiling Minecraft Mod (Updated)
 description: Very simple action to compile your Minecraft mod
 branding:
   icon: archive
